2009-03-16 Frank Naegler <typo3@naegler.net>

	* added cObj viewhelper to tx_community_view_userprofile_MyGroups
	* added widget viewhelper to tx_community_view_userprofile_MyGroups
	* added get and set methods for groups to tx_community_controller_AbstractCommunityApplication
	* added group support to image widget
	* added group widget: member birthdaylist
	
2008-12-16 Ingo Renner  <ingo@typo3.org>

	* added square thumbnails
	* added a check for empty searches

2009-02-26 Frank Naegler <typo3@naegler.net>

	* added support for userProfile and startpage on myFriendsWidget

2009-02-20 Frank Naegler <typo3@naegler.net>

	* added config for mail headers in invteApplication

2009-02-19 Frank Naegler <typo3@naegler.net>

	* added new marker ###MESSAGE_CLASS### to tx_community_view_invite_Message

2009-02-18 Frank Naegler <typo3@naegler.net>

	* added hook and interface to inviteApplication for additional markers in the invite email

2009-02-12 Frank Naegler <typo3@naegler.net>

	* added messages to the profileActions for new relations
	* change removeRelationship method.

2009-02-05 Frank Naegler <typo3@naegler.net>

	* search apllication controoler: added check in getWhereClause() => if we get an empty value, just return an empty string. else, this function returns a bad SQL where clause.

2009-02-05 Michael Knabe <mk@e-netconsulting.de>

	* added pagebrowser to "myfriends" and "searchapplication"
	* changed the query for grouplist, so that it now is limited to the really needed groups

2009-02-04 Frank Naegler <typo3@naegler.net>

	* add storeing of search parameters into session for search application

2009-02-03 Frank Naegler <typo3@naegler.net>

	* add delete functionality for group videos
	* add $count = null, $firstEntry = null as arguments for tx_community_model_GroupGateway->getAllGroups to use limit in query

2009-01-23 Frank Naegler  <typo3@naegler.net>

	* add search function to the listGroupsApplication
	* add findByWhereClause to the GroupGateway
